# zopfli

./: Cargo.toml
.github/workflows/: ci.yml
src/: blocksplitter.rs  cache.rs  deflate.rs  hash.rs  lib.rs  lz77.rs  main.rs  squeeze.rs  util.rs
test/: run.sh
