[package]
name = "zopfli"
version = "0.8.0"
description = "A Rust implementation of the Zopfli compression algorithm."
license = "Apache-2.0"
keywords = ["compression"]
homepage = "https://github.com/zopfli-rs/zopfli"
repository = "https://github.com/zopfli-rs/zopfli"
readme = "README.md"
categories = ["compression", "no-std"]
exclude = ["test/*"]
edition = "2021"
rust-version = "1.70"

[dependencies]
crc32fast = { version = "1.3.2", default-features = false, optional = true }
simd-adler32 = { version = "0.3.7", default-features = false, optional = true }
typed-arena = { version = "2.0.2", default-features = false }
log = "0.4.20"
lockfree-object-pool = "0.1.4"
once_cell = "1.18.0"
genevo = "0.7.1"
ordered-float = "3.7.0"
smallvec = "1.10.0"
rand = "0.8.5"
moka = { version = "0.12.1", features = ["sync"] }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
miniz_oxide = "0.7.1"

[features]
default = ["std", "gzip", "zlib"]
gzip = ["dep:crc32fast"]
zlib = ["dep:simd-adler32"]
nightly = ["crc32fast?/nightly", "simd-adler32?/nightly"]
std = []

[[bin]]
name = "zopfli"
required-features = ["std", "gzip", "zlib"]

[profile.release]
debug = true

# docs.rs uses a nightly toolchain, so it can leverage unstable rustdoc features.
# Reference: https://docs.rs/about/builds
[package.metadata.docs.rs]
cargo-args = ["--all-features"]
